# rust-axum-tutorial

./: Cargo.toml
posts-sea-orm/: .env  Cargo.toml  docker-compose.yml
posts-sea-orm/api/: Cargo.toml
posts-sea-orm/api/src/: app_state.rs  main.rs
posts-sea-orm/api/src/queries/: mod.rs  task_queries.rs
posts-sea-orm/database/: init.sql
posts-sea-orm/entity/: Cargo.toml
posts-sea-orm/entity/src/: tasks.rs
posts-sea-orm/migration/: Cargo.toml
posts-sea-orm/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240520_063419_create_table.rs
todos/: Cargo.toml
todos/src/: main.rs
