[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum-example-service = { path = "../service" }
entity = { path = "../entity" }
migration = { path = "../migration" }
axum = "0.7.5"
axum-macros = "0.4.1"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.83"
tracing = "0.1.40"
# axum-macros = ""
